--- a/slider.html
+++ b/slider.html
@@ -41,11 +41,14 @@
         });
 
         function handleOrientation(event) {
-            const gamma = event.gamma; // Left-to-right tilt
+            let gamma = event.gamma; // Left-to-right tilt
 
             if (gamma !== null) {
+                // Clamp gamma to stay within -90 to 90 degrees
+                gamma = Math.max(-90, Math.min(90, gamma));
+
                 // Map gamma (-90 to 90) to slider range (0 to 100)
-                const newValue = Math.min(Math.max((gamma + 90) / 180 * 100, 0), 100);
+                const newValue = (gamma + 90) / 180 * 100;
                 slider.value = newValue;
                 sliderValueDisplay.textContent = Math.round(newValue);
             }
