--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Index Page</title>
 </head>
 <body>
-    <a href="slider.html">slider.html</a>
+    <a href="gravity_slider.html">gravity_slider.html</a></p>
+    <a href="cup_pong_keyboard.html">cup_pong_keyboard.html</a>
 </body>
 </html>
